bitbybit-tests/tests/ui/multiple_ranges_attributes.stderr
error: custom attribute panicked
 --> tests/ui/multiple_ranges_attributes.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: bitenum!: ranges attribute must only be specified once
